--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@ img {
     display: flex;
     padding: 10px 20px;
     border-radius: 10px;
+    color:rgb(55, 54, 48)
 }
 
 .header {
@@ -32,6 +33,7 @@ img {
     margin-left: auto;
     border-radius: 5px;
     background-color: aliceblue;
+    border-color:rgb(55, 54, 48)
 }
 
 .shelf {
@@ -55,5 +57,31 @@ img {
     border-width: 2px;
     border-color: rgb(107, 105, 92);;
     border-style: solid;
+}
+
+#remove, #readToggle {
+    background-color:rgb(227, 225, 202);
+    border-radius: 5px;
+}
+
+#readToggle {
+    margin-left: 5px;
+}
+
+dialog {
+    border: none;
+    border-radius: 8px;
+    padding: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+}
+
+form {
+    display: flex;
+    gap: 5px;
 }
 
